--- a/QgisModelBaker/ui/topping_wizard/additives.ui
+++ b/QgisModelBaker/ui/topping_wizard/additives.ui
@@ -14,6 +14,40 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="3" column="0" colspan="2">
+    <widget class="QLabel" name="variables_label">
+     <property name="text">
+      <string>Custom Project Variables</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="SpaceCheckListView" name="variables_view" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <widget class="SpaceCheckListView" name="layouts_view" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="QLabel" name="layouts_label">
+     <property name="text">
+      <string>Print Layouts (exported as templates)</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="description">
      <property name="minimumSize">
@@ -39,6 +73,13 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QLabel" name="mapthemes_label">
+     <property name="text">
+      <string>Map Themes</string>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="0" colspan="2">
     <widget class="SpaceCheckListView" name="mapthemes_view" native="true">
      <property name="sizePolicy">
@@ -49,44 +90,10 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QLabel" name="variables_label">
+   <item row="5" column="0" colspan="2">
+    <widget class="QCheckBox" name="validatortopping_checkbox">
      <property name="text">
-      <string>Custom Project Variables</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0" colspan="2">
-    <widget class="SpaceCheckListView" name="layouts_view" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="2">
-    <widget class="SpaceCheckListView" name="variables_view" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="layouts_label">
-     <property name="text">
-      <string>Print Layouts (exported as templates)</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QLabel" name="mapthemes_label">
-     <property name="text">
-      <string>Map Themes</string>
+      <string>Convert validation configuration file to topping file</string>
      </property>
     </widget>
    </item>
