--- a/QgisModelBaker/ui/validator.ui
+++ b/QgisModelBaker/ui/validator.ui
@@ -15,30 +15,6 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="info_label">
-      <property name="text">
-       <string/>
-      </property>
-      <property name="wordWrap">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <layout class="QVBoxLayout" name="filter_layout">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-     </layout>
-    </item>
-    <item row="2" column="0">
-     <layout class="QVBoxLayout" name="export_models_layout">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-     </layout>
-    </item>
     <item row="3" column="0" colspan="2">
      <widget class="QCheckBox" name="skip_geometry_errors_check_box">
       <property name="toolTip">
@@ -49,17 +25,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QLineEdit" name="config_file_line_edit">
-      <property name="toolTip">
-       <string>ili2db option --validConfig</string>
-      </property>
-      <property name="placeholderText">
-       <string>Validator config file (--validConfig)</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QToolButton" name="config_file_tool_button">
       <property name="text">
        <string>...</string>
@@ -69,7 +35,17 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="0" colspan="2">
+    <item row="5" column="0">
+     <widget class="QLineEdit" name="config_file_line_edit">
+      <property name="toolTip">
+       <string>ili2db option --validConfig</string>
+      </property>
+      <property name="placeholderText">
+       <string>Validator config file (--validConfig)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0" colspan="2">
      <widget class="QWidget" name="validation_layout" native="true">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <property name="leftMargin">
@@ -108,7 +84,7 @@
       </layout>
      </widget>
     </item>
-    <item row="6" column="0" colspan="2">
+    <item row="7" column="0" colspan="2">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="error_count_label">
@@ -186,6 +162,37 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="info_label">
+      <property name="text">
+       <string/>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <layout class="QVBoxLayout" name="export_models_layout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+     </layout>
+    </item>
+    <item row="1" column="0">
+     <layout class="QVBoxLayout" name="filter_layout">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+     </layout>
+    </item>
+    <item row="4" column="0">
+     <widget class="QCheckBox" name="activate_verbose_mode_check_box">
+      <property name="text">
+       <string>Activate Verbose Mode</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
