--- a/QgisModelBaker/ui/workflow_wizard/import_source_selection.ui
+++ b/QgisModelBaker/ui/workflow_wizard/import_source_selection.ui
@@ -55,6 +55,19 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="file_browse_button">
+        <property name="toolTip">
+         <string>Browse INTERLIS files</string>
+        </property>
+        <property name="text">
+         <string>…</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <widget class="FileDropListView" name="source_list_view" native="true"/>
+      </item>
       <item row="1" column="0" colspan="3">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
@@ -89,16 +102,19 @@
       <item row="0" column="1">
        <widget class="CompletionLineEdit" name="input_line_edit" native="true"/>
       </item>
-      <item row="2" column="0" colspan="3">
-       <widget class="FileDropListView" name="source_list_view"/>
-      </item>
-      <item row="0" column="2">
-       <widget class="QToolButton" name="file_browse_button">
-        <property name="toolTip">
-         <string>Browse INTERLIS files</string>
+      <item row="3" column="0" colspan="3">
+       <widget class="QToolButton" name="quickxtf_button">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(248, 228, 92)</string>
         </property>
         <property name="text">
-         <string>…</string>
+         <string>Import read-only project to view data quick and dirty</string>
         </property>
        </widget>
       </item>
