--- a/QgisModelBaker/ui/pg_settings_panel.ui
+++ b/QgisModelBaker/ui/pg_settings_panel.ui
@@ -14,11 +14,28 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="0" colspan="2">
-    <widget class="QgsAuthSettingsWidget" name="pg_auth_settings" native="true"/>
+   <item row="2" column="1">
+    <widget class="QLineEdit" name="pg_port_line_edit">
+     <property name="placeholderText">
+      <string>[Leave empty to use standard port 5432]</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QComboBox" name="pg_schema_combo_box"/>
    </item>
    <item row="0" column="1">
     <widget class="QComboBox" name="pg_service_combo_box"/>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="pg_port_label">
+     <property name="text">
+      <string>Port</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <widget class="QgsAuthSettingsWidget" name="pg_auth_settings" native="true"/>
    </item>
    <item row="0" column="0">
     <widget class="QLabel" name="label">
@@ -27,31 +44,10 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="pg_schema_label">
-     <property name="text">
-      <string>Schema</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0" colspan="2">
-    <widget class="QCheckBox" name="pg_use_super_login">
-     <property name="text">
-      <string>Use logins from settings (superuser) for schema generation</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="pg_host_label">
-     <property name="text">
-      <string>Host</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="pg_port_label">
-     <property name="text">
-      <string>Port</string>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="pg_database_line_edit">
+     <property name="placeholderText">
+      <string>Database Name</string>
      </property>
     </widget>
    </item>
@@ -62,27 +58,10 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QLineEdit" name="pg_port_line_edit">
-     <property name="placeholderText">
-      <string>[Leave empty to use standard port 5432]</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="pg_host_line_edit">
-     <property name="text">
-      <string>localhost</string>
-     </property>
-     <property name="placeholderText">
-      <string>Database Hostname</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="pg_database_line_edit">
-     <property name="placeholderText">
-      <string>Database Name</string>
+   <item row="5" column="1">
+    <widget class="QComboBox" name="pg_ssl_mode_combo_box">
+     <property name="toolTip">
+      <string>This option determines whether or with what priority a secure SSL TCP/IP connection will be negotiated with the server.</string>
      </property>
     </widget>
    </item>
@@ -96,15 +75,49 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QComboBox" name="pg_ssl_mode_combo_box">
-     <property name="toolTip">
-      <string>This option determines whether or with what priority a secure SSL TCP/IP connection will be negotiated with the server.</string>
+   <item row="8" column="0" colspan="2">
+    <widget class="QCheckBox" name="pg_use_super_login">
+     <property name="text">
+      <string>Use logins from settings (superuser) for schema generation</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
-    <widget class="QComboBox" name="pg_schema_combo_box"/>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="pg_host_line_edit">
+     <property name="text">
+      <string>localhost</string>
+     </property>
+     <property name="placeholderText">
+      <string>Database Hostname</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="pg_host_label">
+     <property name="text">
+      <string>Host</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="pg_schema_label">
+     <property name="text">
+      <string>Schema</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="2">
+    <widget class="QToolButton" name="pg_dbparam_button">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Specific custom parameters</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
