--- a/QgisModelBaker/ui/dbparam_map.ui
+++ b/QgisModelBaker/ui/dbparam_map.ui
@@ -44,6 +44,9 @@
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
      </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
      <attribute name="verticalHeaderMinimumSectionSize">
       <number>50</number>
      </attribute>
