--- a/QgisModelBaker/ui/dbparam_map.ui
+++ b/QgisModelBaker/ui/dbparam_map.ui
@@ -17,10 +17,20 @@
    <item row="0" column="0">
     <widget class="QLabel" name="description_label">
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter your custom parameters passed to ili2db via temporary file by &lt;span style=&quot; font-family:'monospace';&quot;&gt;--dbparams&lt;/span&gt;. Be aware that those settings are not used in the QGIS Project.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter your parameters passed to ili2db via a temporary file to &lt;span style=&quot; font-family:'monospace';&quot;&gt;--dbparams&lt;/span&gt;. These settings are used to create or update a database. They are not considered in the QGIS project.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -69,12 +79,9 @@
     </widget>
    </item>
    <item row="2" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+    <widget class="QLabel" name="boolean_note_label">
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Boolean values should be &lt;span style=&quot; font-style:italic;&quot;&gt;true&lt;/span&gt; or &lt;span style=&quot; font-style:italic;&quot;&gt;false&lt;/span&gt; (lowercase)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
