--- a/QgisModelBaker/ui/dbparam_map.ui
+++ b/QgisModelBaker/ui/dbparam_map.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>477</width>
+    <width>478</width>
     <height>355</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Custom Parameters</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -81,7 +81,7 @@
    <item row="2" column="0">
     <widget class="QLabel" name="boolean_note_label">
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Boolean values should be &lt;span style=&quot; font-style:italic;&quot;&gt;true&lt;/span&gt; or &lt;span style=&quot; font-style:italic;&quot;&gt;false&lt;/span&gt; (lowercase)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;p&gt;Boolean values should be &lt;span style=&quot; font-style:italic;&quot;&gt;true&lt;/span&gt; or &lt;span style=&quot; font-style:italic;&quot;&gt;false&lt;/span&gt; (lowercase).&lt;/p&gt;&lt;p&gt;The possible parameters are described in the respective &lt;a href=&quot;https://jdbc.postgresql.org/documentation/use/#connection-parameters&quot;&gt;JDBC driver&lt;/a&gt;.&lt;/p&gt;</string>
      </property>
     </widget>
    </item>
