--- a/QgisModelBaker/ui/dbparam_map.ui
+++ b/QgisModelBaker/ui/dbparam_map.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>478</width>
+    <width>484</width>
     <height>355</height>
    </rect>
   </property>
@@ -82,6 +82,9 @@
     <widget class="QLabel" name="boolean_note_label">
      <property name="text">
       <string>&lt;p&gt;Boolean values should be &lt;span style=&quot; font-style:italic;&quot;&gt;true&lt;/span&gt; or &lt;span style=&quot; font-style:italic;&quot;&gt;false&lt;/span&gt; (lowercase).&lt;/p&gt;&lt;p&gt;The possible parameters are described in the respective &lt;a href=&quot;https://jdbc.postgresql.org/documentation/use/#connection-parameters&quot;&gt;JDBC driver&lt;/a&gt;.&lt;/p&gt;</string>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
